feat: 글로벌 경제지표 카테고리 API 및 캐시 서비스 분리
- GlobalIndicatorCacheService 분리: @Cacheable/@CacheEvict 캐시 전담
- GlobalIndicatorQueryService 리팩토링: CacheService 위임, 카테고리별 조회 추가
- GlobalCategoryResponse, GlobalIndicatorSummaryResponse DTO 추가
- GlobalCategoryIndicatorResponse DTO 추가
- GlobalIndicatorController: categories 응답 구조 변경, 카테고리별 데이터 조회 API 추가
- 설계 문서 업데이트

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>